@@ -1,0 +1,33 @@
+# $Id$
+#
+# This file contains names and references to HBA libraries
+#
+# Format:
+#
+# <library name>  <library pathname>
+#
+# The library name should be prepended with the domain of
+# the manufacturer or driver author.
+#
+# 32bit/64bit implementation note:
+#   If a 32bit implementation tries to load a 64 bit library,
+#   the load will fail with the result that the 64 bit vendor
+#   library is ignored.
+#   Likewise, if a 64bit implementation tries to load a 32 bit library,
+#   the load will fail with the result that the 32 bit vendor
+#   library is ignored.
+
+org.open-fcoe.libhbalinux /usr/lib/libhbalinux.so.2
+
+
+# Set a debug level (depends on compilation switches)
+#
+# Format:
+#
+# "debuglevel"    <debug level>
+#
+# 0 is default, 1 show vendor library opens,
+# 2 shows function calls, 3 shows callback events
+#
+# Uncomment the next line to specify a level
+#debuglevel 3
